<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pick_file">Pick File</string>
    <string name="pick_folder">Pick Folder</string>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">British Hills</string>
    <string name="list_alpha">List Alphabetically</string>
    <string name="list_by_height">List by height</string>
    <string name="list_by_distance">List by Distance</string>
    <string name="munroes_button">Munros</string>
    <string name="corbetts_button">Corbetts</string>
    <string name="hewitts_button">Hewitts</string>
    <string name="donalds_button">Donalds</string>
    <string name="grahams_button">Grahams</string>
    <string name="show_map">Show hills on Map</string>
    <string name="select_multiple">Select Hills</string>
    <string name="satellite_button">Sat</string>
    <string name="map_button">Map</string>
    <string name="show_gmap">Google Map</string>
    <string name="show_osmap">OS Map(browser)</string>
    <string name="search">Search</string>
    <string name="search_list">Search Hill List</string>
    <string name="save_selections">Save</string>
    <string name="cancel">Cancel</string>
    <string name="label_name"><b>Name</b></string>
    <string name="label_height"><b>Height</b></string>
    <string name="label_latitude"><b>Position</b></string>
    <string name="label_longitude"><b>Longitude</b></string>
    <string name="label_osgrid"><b>OS Grid Reference</b></string>
    <string name="label_os50k"><b>1:50K Map</b></string>
    <string name="label_os25k"><b>1:25K Map</b></string>
    <string name="label_section"><b>Section</b></string>
    <string name="label_summit_feature"><b>Summit Feature</b></string>
    <string name="label_classification"><b>Classifications</b></string>
    <string name="label_munros"><b>Munros</b></string>
    <string name="label_munro_tops"><b>Munro Tops</b></string>
    <string name="label_murdos"><b>Murdos</b></string>
    <string name="label_corbetts"><b>Corbetts</b></string>
    <string name="label_corbett_tops"><b>Corbett Tops</b></string>
    <string name="label_grahams"><b>Grahams</b></string>
    <string name="label_graham_tops"><b>Graham Tops</b></string>
    <string name="label_donalds"><b>Donalds</b></string>
    <string name="label_donald_tops"><b>Donald Tops</b></string>
    <string name="label_hewitts"><b>Hewitts</b></string>
    <string name="label_nuttalls"><b>Nuttalls</b></string>
    <string name="label_marilyns"><b>Marilyns</b></string>
    <string name="label_wainwrights"><b>Wainrights</b></string>
    <string name="label_wainwright_fells"><b>Wainwright Outlying Fells</b></string>
    <string name="label_county_tops"><b>County Tops</b></string>
    <string name="label_birketts"><b>Birketts</b></string>
    <string name="label_deweys"><b>Deweys</b></string>
    <string name="label_trail100"><b>Trail 100</b></string>
    <string name="label_scottish_hills"><b>Scotland</b></string>
    <string name="label_welsh_hills"><b>Wales</b></string>
    <string name="label_english_hills"><b>England</b></string>
    <string name="label_iomni"><b>NI/Isle of Man</b></string>
    <string name="label_other_GB_hills"><b>Other GB Hills</b></string>
    <string name="label_nearby_hills"><b>Nearby Hills</b></string>
    <string name="label_allEnglish"><b>All English Hills</b></string>
    <string name="label_allScottish"><b>All Scottish Hills</b></string>
    <string name="label_allWelsh"><b>All Welsh Hills</b></string>
    <string name="label_colHeight"><b>Col Height(m)</b></string>
    <string name="label_colGridRef"><b>Col Grid Reference</b></string>
    <string name="label_drop"><b>Drop(m)</b></string>
    <string name="label_dateClimbed"><b>Date Climbed</b></string>
    <string name="label_notes"><b>Notes</b></string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_showosmap">Online OS Map/Info</string>
    <string name="menu_set_range">Set Range</string>
    <string name="menu_10miles">10 miles (16km)</string>
    <string name="menu_25miles">25 miles (40km)</string>
    <string name="menu_50miles">50 miles (80km)</string>
    <string name="pref_metric_heights"><b>Use Metric Heights</b></string>
    <string name="pref_metric_distances"><b>Use Metric Distances</b></string>
    <string name="mark_hill_climbed">Mark as Climbed</string>
    <string name="mark_hill_not_climbed">Mark not Climbed</string>
    <string name="mark_all_climbed">Set all as climbed</string>
    <string name="mark_none_climbed">Set none as climbed</string>
    <string name="menu_show_climbed">Climbed</string>
    <string name="menu_show_not_climbed">Unclimbed</string>
    <string name="menu_show_all">All</string>
    <string name="menu_filter">Filter</string>
    <string name="backuprestore"><b>Backup/Restore</b></string>
    <string name="viewforecasts"><b>Hill Forecasts</b></string>
    <string name="refresh_location">Updating Location</string>
    <string name="used_with_kind_permission_">Licensed under Creative Commons 3.0</string>
    <string name="biber_website">http://hills-database.co.uk/</string>
    <string name="version_number">version 2.4.0</string>
    <string name="hill_groups_label">Hill Groups</string>
    <string name="munros_desc">A Munro is a Scottish mountain over 3000 ft in height, distinct and separate from its surrounding mountains. Munro\'s Tables were originally compiled in 1891 by Sir Hugh Munro, but are now revised and maintained by the Scottish Mountaineering Club.</string>
    <string name="murdos_desc">A Murdo is a Scottish mountain over 3000 ft in height, with a drop of at least 30 metres (98 feet) on all sides.  All Murdos except Beinn a\'Chroin (W top) are also Munros or Munro Tops.  All Munros are Murdos, but not all Munro Tops are Murdos.</string>
    <string name="corbetts_desc">A Corbett is a Scottish hill between 2500 and 2999 feet high with a drop of at least 500 feet (152.4m) on all sides.  They are named after the list\'s original compiler, J.Rooke Corbett.</string>
    <string name="donalds_desc">The Donalds are named after Percy Donald and his list of hills over 2000 feet in the Scottish Lowlands.</string>
    <string name="grahams_desc">A Graham is a Scottish hill between 2000 and 2499 feet high with a drop of at least 150 metres on all sides.  They were originally referred to as Elsies, but have since been renamed after a compiler of a similar list, Fiona Graham.</string>
    <string name="desc_marilyns">A Marilyn is a hill of any height with a drop of 150 metres (nearly 500 ft) or more on all sides.  So it is a hill which is relatively high compared to its surroundings.</string>
    <string name="hewitts_desc">Hewitts are hills within both England and Wales that are at least 2000 feet high with a drop of 30 metres on all sides.</string>
    <string name="nuttalls_desc">Nuttalls are hills in England and Wales that are at least 2000 feet high with a drop of 15 metres on all sides.</string>
    <string name="wainwrights_desc">The Wainwrights are a group of 214 hills, made famous by the 7 Pictorial Guide to the Lakeland Fells written by Alfred Wainwright.</string>
    <string name="wainwright_outlying_desc">Wainwright Outlying Fells are hills listed in The Outlying Fells of Lakeland by Alfred Wainwright.</string>
    <string name="birketts_desc">The Birketts are all the Lake District hills over 1,000ft as listed in Bill Birkett\'s Complete Lakeland Fells.</string>
    <string name="deweys_desc">A Dewey is a mountain or hill in England, Wales or the Isle of Man, that exceeds 500 metres in height, but is below 610 metres (2000ft) in altitude; it must be separated from adjacent tops by a height difference of at least 30 metres on all sides</string>
    <string name="trail_100_desc">A list of 100 UK hills which appeared in an issue of Trail Magazine.  It is a subjective list, compiled by canvassing opinions from Trail staff and readers, taking into consideration view, difficulty, features, historical interest, etc.</string>
    <string name="bhdescription">The British Hills application relies on the fantastic efforts of Graham Jackson, Chris Crocker, John Barnard, George Gradwell, Simon Edwardes, Mark Jackson and Jim Bloomer. Please visit http://hills-database.co.uk to read about how the database is constructed and donate to keep the updates coming. The data is licensed under Creative Commons 3.0</string>
    <string name="droidfuattrib">Parts of this application are based on the Droid-Fu library, used under the Apache License, Version 2.0</string>
    <string name="donatetext">The British Hills application is free. However the creation and maintenance of the application amount to many hours of work. I intend to keep British Hills both free and without advertising. However, if you like the app and wish to contribute towards it\'s maintenance, please consider making a small donation by clicking on the PayPal button below.</string>
    <string name="google_map">Google Map</string>
    <string name="ordnance_survey_map">Ordnance Survey Map</string>
    <string name="scoot_search">Scoot Search</string>
    <string name="hill_images_are_used_under_licence_as_listed_below">Hill images are used under licence as listed below</string>


</resources>