<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_list_alpha"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/list_alpha"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_list_height"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/list_by_height"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_by_distance"
        android:icon="@drawable/ruler"
        android:title="@string/list_by_distance"
        android:visible="false" />


    <item
        android:id="@+id/menu_set_range"
        android:icon="@drawable/disc"
        android:title="@string/menu_set_range"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/menu_range_10miles"
                android:title="@string/menu_10miles" />
            <item
                android:id="@+id/menu_range_25miles"
                android:title="@string/menu_25miles" />
            <item
                android:id="@+id/menu_range_50miles"
                android:title="@string/menu_50miles" />


        </menu>


    </item>

    <item
        android:id="@+id/filter_menu"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_filter">
        <menu>
            <item
                android:id="@+id/menu_show_all"
                android:title="@string/menu_show_all" />
            <item
                android:id="@+id/menu_show_climbed"
                android:title="@string/menu_show_climbed" />
            <item
                android:id="@+id/menu_show_not_climbed"
                android:title="@string/menu_show_not_climbed" />


        </menu>


    </item>
    <item
        android:id="@+id/menu_all_climbed"
        android:title="@string/mark_all_climbed" />
    <item
        android:id="@+id/menu_none_climbed"
        android:title="@string/mark_none_climbed" />

</menu>
