<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"

    grid:columnCount="2"
    grid:orientation="horizontal"
    grid:rowCount="4">

    <android.support.v7.widget.CardView
        android:id="@+id/menu_scotland"

        android:layout_margin="5sp"
        grid:layout_column="0"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_row="0"
        grid:layout_rowWeight="1">

        <ImageView
            style="@style/menu_grid_imageview"
            android:src="@drawable/scotland3d"></ImageView>

        <TextView
            android:id="@+id/scottish_hills"
            style="@style/cardview_title"
            android:text="@string/label_scottish_hills" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/menu_wales"
        android:layout_margin="5sp"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_row="0"
        grid:layout_rowWeight="1"
        grid:paddingStart="5sp">

        <ImageView
            style="@style/menu_grid_imageview"
            android:src="@drawable/wales3d"></ImageView>

        <TextView
            android:id="@+id/welsh_hills"
            style="@style/cardview_title"
            android:text="@string/label_welsh_hills" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/menu_england"

        android:layout_margin="5sp"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            style="@style/menu_grid_imageview"
            android:src="@drawable/england3d"></ImageView>

        <TextView
            android:id="@+id/english_hills"
            style="@style/cardview_title"
            android:text="@string/label_english_hills" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/menu_gb"
        android:layout_margin="5sp"
        android:background="@drawable/button_text"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            style="@style/menu_grid_imageview"
            android:src="@drawable/uk3d"></ImageView>

        <TextView
            android:id="@+id/other_GB_hills"
            style="@style/cardview_title"
            android:text="@string/label_other_GB_hills" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/menu_nearby"
        android:layout_margin="5sp"
        android:background="@drawable/button_text"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            android:src="@drawable/signpost"
            style="@style/menu_grid_imageview"></ImageView>

        <TextView
            android:id="@+id/nearby_hills"
            style="@style/cardview_title"
            android:text="@string/label_nearby_hills" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/menu_forecasts"
        android:layout_margin="5sp"
        android:background="@drawable/button_text"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            android:id="@+id/imageView2"
            android:src="@drawable/weather2"
            style="@style/menu_grid_imageview"></ImageView>

        <TextView
            android:id="@+id/view_forecasts"
            style="@style/cardview_title"
            android:text="@string/viewforecasts" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/menu_backup"
        android:layout_margin="5sp"
        android:background="@drawable/button_text"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            android:id="@+id/imageView1"
            style="@style/menu_grid_imageview"
            android:src="@drawable/backup"></ImageView>

        <TextView
            android:id="@+id/export_bagging"
            style="@style/cardview_title"
            android:text="@string/backuprestore" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/menu_search"

        android:layout_margin="5sp"
        grid:layout_columnWeight="1"
        grid:layout_gravity="center"
        grid:layout_rowWeight="1">

        <ImageView
            android:id="@+id/main_search_button"
            android:src="@drawable/magnifying_glass"
            style="@style/menu_grid_imageview"></ImageView>

        <TextView
            android:id="@+id/main_search"
            style="@style/cardview_title"
            android:text="@string/search" />

    </android.support.v7.widget.CardView>


</android.support.v7.widget.GridLayout>

